# ffvm

./: README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  tests.yml
ffvm/: __main__.py  cli.py
tests/: test_utils.py
