[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ffvm"
version = "0.2.0"
description = "CLI tool for encoding videos with ffmpeg and scoring quality with VMAF"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "Birk" },
]
keywords = ["ffmpeg", "vmaf", "video", "encoding", "quality"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Conversion",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
ffvm = "ffvm.cli:app"

[project.urls]
Repository = "https://github.com/birkdev/ffvm"
